@@ -116,6 +116,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       _Mem_fn_base(_MemFunPtr __pmf) noexcept : _M_pmf(__pmf) { }
 
       template<typename... _Args>
+	_GLIBCXX20_CONSTEXPR
 	auto
 	operator()(_Args&&... __args) const
 	noexcept(noexcept(
@@ -141,6 +142,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       _Mem_fn_base(_MemObjPtr __pm) noexcept : _M_pm(__pm) { }
 
       template<typename _Tp>
+	_GLIBCXX20_CONSTEXPR
 	auto
 	operator()(_Tp&& __obj) const
 	noexcept(noexcept(std::__invoke(_M_pm, std::forward<_Tp>(__obj))))
@@ -166,6 +168,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
    *  @ingroup functors
    */
   template<typename _Tp, typename _Class>
+    _GLIBCXX20_CONSTEXPR
     inline _Mem_fn<_Tp _Class::*>
     mem_fn(_Tp _Class::* __pm) noexcept
     {
@@ -301,6 +304,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
        * but not volatile-qualified. This might be a defect in the TR.
        */
       template<typename _CVRef, typename _Tuple>
+	_GLIBCXX20_CONSTEXPR
 	_Tp&
 	operator()(_CVRef& __arg, _Tuple&) const volatile
 	{ return __arg.get(); }
@@ -317,6 +321,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     {
     public:
       template<typename _CVArg, typename... _Args>
+	_GLIBCXX20_CONSTEXPR
 	auto
 	operator()(_CVArg& __arg,
 		   tuple<_Args...>& __tuple) const volatile
@@ -332,6 +337,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       // Invokes the underlying function object __arg by unpacking all
       // of the arguments in the tuple.
       template<typename _CVArg, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	auto
 	__call(_CVArg& __arg, tuple<_Args...>& __tuple,
 	       const _Index_tuple<_Indexes...>&) const volatile
@@ -351,6 +357,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     {
     public:
       template<typename _Tuple>
+	_GLIBCXX20_CONSTEXPR
 	_Safe_tuple_element_t<(is_placeholder<_Arg>::value - 1), _Tuple>&&
 	operator()(const volatile _Arg&, _Tuple& __tuple) const volatile
 	{
@@ -369,6 +376,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
     {
     public:
       template<typename _CVArg, typename _Tuple>
+	_GLIBCXX20_CONSTEXPR
 	_CVArg&&
 	operator()(_CVArg&& __arg, _Tuple&) const volatile
 	{ return std::forward<_CVArg>(__arg); }
@@ -404,6 +412,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call unqualified
       template<typename _Result, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Result
 	__call(tuple<_Args...>&& __args, _Index_tuple<_Indexes...>)
 	{
@@ -414,6 +423,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call as const
       template<typename _Result, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Result
 	__call_c(tuple<_Args...>&& __args, _Index_tuple<_Indexes...>) const
 	{
@@ -468,24 +478,24 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
      public:
       template<typename... _Args>
-	explicit _Bind(const _Functor& __f, _Args&&... __args)
+	explicit _GLIBCXX20_CONSTEXPR
+	_Bind(const _Functor& __f, _Args&&... __args)
 	: _M_f(__f), _M_bound_args(std::forward<_Args>(__args)...)
 	{ }
 
       template<typename... _Args>
-	explicit _Bind(_Functor&& __f, _Args&&... __args)
+	explicit _GLIBCXX20_CONSTEXPR
+	_Bind(_Functor&& __f, _Args&&... __args)
 	: _M_f(std::move(__f)), _M_bound_args(std::forward<_Args>(__args)...)
 	{ }
 
       _Bind(const _Bind&) = default;
-
-      _Bind(_Bind&& __b)
-      : _M_f(std::move(__b._M_f)), _M_bound_args(std::move(__b._M_bound_args))
-      { }
+      _Bind(_Bind&&) = default;
 
       // Call unqualified
       template<typename... _Args,
 	       typename _Result = _Res_type<tuple<_Args...>>>
+	_GLIBCXX20_CONSTEXPR
 	_Result
 	operator()(_Args&&... __args)
 	{
@@ -497,6 +507,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       // Call as const
       template<typename... _Args,
 	       typename _Result = _Res_type_cv<tuple<_Args...>, add_const>>
+	_GLIBCXX20_CONSTEXPR
 	_Result
 	operator()(_Args&&... __args) const
 	{
@@ -551,6 +562,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call unqualified
       template<typename _Res, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Res
 	__call(tuple<_Args...>&& __args, _Index_tuple<_Indexes...>)
 	{
@@ -560,6 +572,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call as const
       template<typename _Res, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Res
 	__call(tuple<_Args...>&& __args, _Index_tuple<_Indexes...>) const
 	{
@@ -569,6 +582,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call as volatile
       template<typename _Res, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Res
 	__call(tuple<_Args...>&& __args, _Index_tuple<_Indexes...>) volatile
 	{
@@ -578,6 +592,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call as const volatile
       template<typename _Res, typename... _Args, std::size_t... _Indexes>
+	_GLIBCXX20_CONSTEXPR
 	_Res
 	__call(tuple<_Args...>&& __args,
 	       _Index_tuple<_Indexes...>) const volatile
@@ -590,23 +605,23 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       typedef _Result result_type;
 
       template<typename... _Args>
-	explicit _Bind_result(const _Functor& __f, _Args&&... __args)
+	explicit _GLIBCXX20_CONSTEXPR
+	_Bind_result(const _Functor& __f, _Args&&... __args)
 	: _M_f(__f), _M_bound_args(std::forward<_Args>(__args)...)
 	{ }
 
       template<typename... _Args>
-	explicit _Bind_result(_Functor&& __f, _Args&&... __args)
+	explicit _GLIBCXX20_CONSTEXPR
+	_Bind_result(_Functor&& __f, _Args&&... __args)
 	: _M_f(std::move(__f)), _M_bound_args(std::forward<_Args>(__args)...)
 	{ }
 
       _Bind_result(const _Bind_result&) = default;
-
-      _Bind_result(_Bind_result&& __b)
-      : _M_f(std::move(__b._M_f)), _M_bound_args(std::move(__b._M_bound_args))
-      { }
+      _Bind_result(_Bind_result&&) = default;
 
       // Call unqualified
       template<typename... _Args>
+	_GLIBCXX20_CONSTEXPR
 	result_type
 	operator()(_Args&&... __args)
 	{
@@ -617,6 +632,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
       // Call as const
       template<typename... _Args>
+	_GLIBCXX20_CONSTEXPR
 	result_type
 	operator()(_Args&&... __args) const
 	{
@@ -767,7 +783,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
    *  @ingroup binders
    */
   template<typename _Func, typename... _BoundArgs>
-    inline typename
+    inline _GLIBCXX20_CONSTEXPR typename
     _Bind_helper<__is_socketlike<_Func>::value, _Func, _BoundArgs...>::type
     bind(_Func&& __f, _BoundArgs&&... __args)
     {
@@ -791,7 +807,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
    *  @ingroup binders
    */
   template<typename _Result, typename _Func, typename... _BoundArgs>
-    inline
+    inline _GLIBCXX20_CONSTEXPR
     typename _Bindres_helper<_Result, _Func, _BoundArgs...>::type
     bind(_Func&& __f, _BoundArgs&&... __args)
     {
@@ -890,7 +906,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       = _Bind_front<decay_t<_Fn>, decay_t<_Args>...>;
 
   template<typename _Fn, typename... _Args>
-    _Bind_front_t<_Fn, _Args...>
+    constexpr _Bind_front_t<_Fn, _Args...>
     bind_front(_Fn&& __fn, _Args&&... __args)
     noexcept(is_nothrow_constructible_v<int, _Bind_front_t<_Fn, _Args...>,
 					_Fn, _Args...>)
@@ -914,6 +930,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 
     public:
       template<typename _Fn2>
+	constexpr
 	_Not_fn(_Fn2&& __fn, int)
 	: _M_fn(std::forward<_Fn2>(__fn)) { }
 
@@ -926,6 +943,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
       // and deducing the return type and exception-specification.
 #define _GLIBCXX_NOT_FN_CALL_OP( _QUALS )				\
       template<typename... _Args>					\
+	_GLIBCXX20_CONSTEXPR						\
 	decltype(_S_not<__inv_res_t<_Fn _QUALS, _Args...>>())		\
 	operator()(_Args&&... __args) _QUALS				\
 	noexcept(__is_nothrow_invocable<_Fn _QUALS, _Args...>::value	\
@@ -970,6 +988,7 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
 #define __cpp_lib_not_fn 201603
   /// [func.not_fn] Function template not_fn
   template<typename _Fn>
+    _GLIBCXX20_CONSTEXPR
     inline auto
     not_fn(_Fn&& __fn)
     noexcept(std::is_nothrow_constructible<std::decay_t<_Fn>, _Fn&&>::value)
